<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:textAlignment="center"
    tools:context=".AddTrickActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/title_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:padding="30dp"
            android:text="@string/new_trick"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/name_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter the name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/landing_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/landing"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center" />

        <RadioGroup
            android:id="@+id/radio_group_landing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="5dp"
                android:text="@string/clean"
                android:checked="true"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_sketch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="5dp"
                android:text="@string/sketch"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_no_land"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/did_not_land"
                android:textSize="16sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/notes_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="Add Notes"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/notes"
            android:inputType="textMultiLine" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>